# artic-lsp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
include/artic/: ast.h  bind.h  check.h  loc.h  log.h  parser.h  print.h
include/artic/ls/: compile.h  config.h  server.h  workspace.h
src/: CMakeLists.txt  ast.cpp  bind.cpp  check.cpp  lexer.cpp  main.cpp  parser.cpp  print.cpp
src/ls/: compile.cpp  config.cpp  server.cpp  workspace.cpp
